--- a/index.html
+++ b/index.html
@@ -53,18 +53,13 @@
       <!-- One column END -->
 
       <!-- Two columns (degrees) START -->
-      <div class="row">
-        <div class="col-3">
-          &nbsp;
-        </div>
-        <div class="col-3">
+      <div class="row justify-content-between align-items-end">
+        <div class="col-md-8">
           <img src="images/clima.svg" class="main-icon" alt="cloudy" width="150" />
-        </div>
-        <div class="col-3 align-self-center">
           <h3 class="degrees" id="temperature">
-            -
+            10
           </h3>
-          <div class="d-inline" id="select">
+          <div id="select">
             <a href="" class="links" id="celsius">
               °C
             </a>
@@ -74,8 +69,12 @@
             </a>
           </div>
         </div>
-        <div class="col-3">
-          &nbsp;
+        <div class="col-md-4">
+          <ul class="list-unstyled">
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2 km/h</li>
+          </ul>
         </div>
       </div>
       <!-- Two columns (degrees) END -->
@@ -141,7 +140,7 @@
 
     <!-- Credit START -->
     <footer class="row justify-content-center">
-      Coded by <a href="https://github.com/rebecagrant/" target="_blank">&nbsp;Rebeca Grant</a>
+      Coded by&nbsp;<a href="https://github.com/rebecagrant/" target="_blank">Rebeca Grant</a>
     </footer>
     <!-- Credit END -->
   </div>
