--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/baaece22c2.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <title>Week 5</title>
+  <title>Weather-app</title>
 </head>
 
 <body>
@@ -22,9 +22,9 @@
       <div class="row mb-4 justify-content-center">
         <!-- Search Form START -->
           <div class="col-6 pr-0 pl-1" id="enter-city">
-            <input type="text" class="form-control" placeholder="Enter a city" id="city-input">
+            <input type="text" class="form-control" placeholder="Enter a city.." id="city-input" autocomplete="off">
           </div>
-          <form id="search-form1">
+          <form id="search-form">
             <button type="submit" class="btn btn-dark ml-1 mr-1"><i class="fas fa-search"></i></button>
           </form>
           <form id="search-form2">
