--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <div class="col-md-4">
           <ul class="list-unstyled">
+            <li>Precipitation: <span id="precipitation"></span>%</li>
             <li>Humidity: <span id="humidity"></span>%</li>
             <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
