--- a/index.html
+++ b/index.html
@@ -75,57 +75,8 @@
       <hr />
 
       <!-- Five columns cards START -->
-      <div class="row justify-content-center">
-        <!-- First card START -->
-        <div class="card col-md m-2">
-          <div class="card-body">
-            <h5 class="card-title">Mon 26</h5>
-            <img src="images/clima.svg" id="icon-card" alt="cloudy" width="50" />
-            <a href="#" id="dayTemp">13°</a>
-            <a href="#" id="nightTemp">7°</a>
-          </div>
-        </div>
-        <!-- First card END -->
-        <!-- Second card START -->
-        <div class="card col-md m-2">
-          <div class="card-body">
-            <h5 class="card-title">Tue 27</h5>
-            <img src="images/clima.svg" id="icon-card" alt="cloudy" width="50" />
-            <a href="#" id="dayTemp">14°</a>
-            <a href="#" id="nightTemp">9°</a>
-          </div>
-        </div>
-        <!-- Second card END -->
-        <!-- Third card START -->
-        <div class="card col-md m-2">
-          <div class="card-body">
-            <h5 class="card-title">Wed 28</h5>
-            <img src="images/clima.svg" id="icon-card" alt="cloudy" width="50" />
-            <a href="#" id="dayTemp">13°</a>
-            <a href="#" id="nightTemp">9°</a>
-          </div>
-        </div>
-        <!-- Third card END -->
-        <!-- Fourth card START -->
-        <div class="card col-md m-2">
-          <div class="card-body">
-            <h5 class="card-title">Thu 29</h5>
-            <img src="images/clima.svg" id="icon-card" alt="cloudy" width="50" />
-            <a href="#" id="dayTemp">15°</a>
-            <a href="#" id="nightTemp">14°</a>
-          </div>
-        </div>
-        <!-- Fourth card END -->
-        <!-- Fifth card START -->
-        <div class="card col-lg m-2">
-          <div class="card-body">
-            <h5 class="card-title">Fri 30</h5>
-            <img src="images/clima.svg" id="icon-card" alt="cloudy" width="50" />
-            <a href="#" id="dayTemp">17°</a>
-            <a href="#" id="nightTemp">13°</a>
-          </div>
-        </div>
-        <!-- Fifth card END -->
+      <div class="row justify-content-center" id="weather-forecast">
+        
       </div>
       <!-- Five columns cards END -->
     </div>
