--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <hr />
 
       <!-- Five columns cards START -->
-      <div class="row justify-content-center" id="weather-forecast">
-        
+      <div class="row justify-content-center" id="forecast">
+
       </div>
       <!-- Five columns cards END -->
     </div>
