--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled">
-            <li><strong>Precipitation:</strong> <span id="precipitation"></span>%</li>
+            <li><strong>Pressure:</strong> <span id="pressure"></span> hPa</li>
             <li><strong>Humidity:</strong> <span id="humidity"></span>%</li>
             <li><strong>Wind:</strong> <span id="wind"></span> km/h</li>
           </ul>
