--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
   <!-- Container START -->
   <div class="container">
 
-    <!-- Weather app START -->
+    <!-- Header app START -->
     <div class="row justify-content-center mt-5">
-      <!-- Search Form START -->
       <h1>Weather Forecast</h1>
-      <!-- Search Form END -->
     </div>
-    <!-- Weather app END -->
+    <!-- Header END -->
 
     <!-- Weather app START -->
     <div class="weather-app rounded">
@@ -60,7 +58,7 @@
       <div class="row justify-content-end">
         <div class="col-sm-4">
           <div class="links">
-            <img src="" class="main-icon" id="icon" alt="cloudy" />
+            <img src="" class="main-icon" id="icon" alt="" />
             <div>
               <div style="float:left"><h3 class="degrees" id="temperature"></h3></div>
               <div style="float:left"><a href="#" class="active" id="celsius-link">
